@@ -6,8 +6,13 @@ import lombok.SneakyThrows;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
+import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.BaseServiceTest;
+import uk.gov.hmcts.reform.finrem.caseorchestration.helper.ConsentedHearingHelper;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Barrister;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ChangedRepresentative;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ConsentedHearingDataElement;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.ConsentedHearingDataWrapper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.InterimHearingData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.InterimHearingItem;
@@ -28,6 +33,7 @@ import static org.hamcrest.CoreMatchers.anyOf;
 import static org.hamcrest.CoreMatchers.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_DIVORCE_CASE_NUMBER;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_RESP_SOLICITOR_EMAIL;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_RESP_SOLICITOR_NAME;
@@ -36,16 +42,24 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_SO
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_SOLICITOR_NAME;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_SOLICITOR_REFERENCE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_REFERRED_DETAIL;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_TYPE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.INTERIM_HEARING_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.REPRESENTATION_UPDATE_HISTORY;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_NAME;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESP_SOLICITOR_REFERENCE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.SOLICITOR_REFERENCE;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Element.element;
 
 public class NotificationRequestMapperTest extends BaseServiceTest {
 
     protected static final String EMPTY_STRING = "";
+    private static final String INTERIM_HEARING_JSON = "/fixtures/contested/interim-hearing-two-collection.json";
+    private static final String CONSENTED_HEARING_JSON = "/fixtures/consented.listOfHearing/list-for-hearing-notification.json";
+
     @Autowired
     NotificationRequestMapper notificationRequestMapper;
+    @Autowired
+    ConsentedHearingHelper helper;
 
     @Test
     public void shouldCreateNotificationRequestForAppSolicitorForConsentedJourney() {
@@ -77,6 +91,23 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         assertEquals("contested", notificationRequest.getCaseType());
         assertEquals("David Goodman", notificationRequest.getRespondentName());
         assertEquals("Victoria Goodman", notificationRequest.getApplicantName());
+    }
+
+    @Test
+    public void shouldReturnHearingTypeForPrepareForHearingContestedEventInvoke() {
+        NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForApplicantSolicitor(
+            getContestedCallbackRequestWithCaseDataValues(Collections.singletonMap(HEARING_TYPE, "First Directions Appointment (FDA)"))
+                .getCaseDetails());
+
+        assertEquals("12345", notificationRequest.getCaseReferenceNumber());
+        assertEquals("RG-123456789", notificationRequest.getSolicitorReferenceNumber());
+        assertEquals(TEST_DIVORCE_CASE_NUMBER, notificationRequest.getDivorceCaseNumber());
+        assertEquals(TEST_SOLICITOR_NAME, notificationRequest.getName());
+        assertEquals(TEST_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
+        assertEquals("contested", notificationRequest.getCaseType());
+        assertEquals("David Goodman", notificationRequest.getRespondentName());
+        assertEquals("Victoria Goodman", notificationRequest.getApplicantName());
+        assertEquals("First Directions Appointment (FDA)", notificationRequest.getHearingType());
     }
 
     @Test
@@ -160,9 +191,9 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForNoticeOfChange(
             callbackRequest.getCaseDetails());
 
-        assertThat(notificationRequest.getNotificationEmail(), is(TEST_SOLICITOR_EMAIL));
-        assertThat(notificationRequest.getName(), is(TEST_SOLICITOR_NAME));
-        assertThat(notificationRequest.getCaseType(), is("contested"));
+        assertEquals(TEST_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
+        assertEquals(TEST_SOLICITOR_NAME, notificationRequest.getName());
+        assertEquals("contested", notificationRequest.getCaseType());
         assertEquals("David Goodman", notificationRequest.getRespondentName());
         assertEquals("Victoria Goodman", notificationRequest.getApplicantName());
     }
@@ -176,9 +207,9 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForNoticeOfChange(
             callbackRequest.getCaseDetails());
 
-        assertThat(notificationRequest.getNotificationEmail(), is(TEST_RESP_SOLICITOR_EMAIL));
-        assertThat(notificationRequest.getName(), is(TEST_RESP_SOLICITOR_NAME));
-        assertThat(notificationRequest.getCaseType(), is("contested"));
+        assertEquals("testRespSolicitor@email.com", notificationRequest.getNotificationEmail());
+        assertEquals("Test Resp Sol", notificationRequest.getName());
+        assertEquals("contested", notificationRequest.getCaseType());
         assertEquals("David Goodman", notificationRequest.getRespondentName());
         assertEquals("Victoria Goodman", notificationRequest.getApplicantName());
     }
@@ -192,9 +223,9 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForNoticeOfChange(
             callbackRequest.getCaseDetails());
 
-        assertThat(notificationRequest.getNotificationEmail(), is(TEST_SOLICITOR_EMAIL));
-        assertThat(notificationRequest.getName(), is(TEST_SOLICITOR_NAME));
-        assertThat(notificationRequest.getCaseType(), is("consented"));
+        assertEquals(TEST_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
+        assertEquals(TEST_SOLICITOR_NAME, notificationRequest.getName());
+        assertEquals("consented", notificationRequest.getCaseType());
         assertEquals("consent", notificationRequest.getCaseOrderType());
         assertEquals("Consent", notificationRequest.getCamelCaseOrderType());
         assertEquals("David Goodman", notificationRequest.getRespondentName());
@@ -210,9 +241,9 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForNoticeOfChange(
             callbackRequest.getCaseDetails());
 
-        assertThat(notificationRequest.getNotificationEmail(), is(TEST_RESP_SOLICITOR_EMAIL));
-        assertThat(notificationRequest.getName(), is(TEST_RESP_SOLICITOR_NAME));
-        assertThat(notificationRequest.getCaseType(), is("consented"));
+        assertEquals(TEST_RESP_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
+        assertEquals(TEST_RESP_SOLICITOR_NAME, notificationRequest.getName());
+        assertEquals("consented", notificationRequest.getCaseType());
         assertEquals("consent", notificationRequest.getCaseOrderType());
         assertEquals("Consent", notificationRequest.getCamelCaseOrderType());
         assertEquals("David Goodman", notificationRequest.getRespondentName());
@@ -221,18 +252,18 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
 
     @Test
     public void shouldCreateNotificationRequestForAppSolicitorForContestedJourneyForInterimHearing() {
-        CallbackRequest callbackRequest = buildInterimHearingCallbackRequest();
+        CallbackRequest callbackRequest = buildHearingCallbackRequest(INTERIM_HEARING_JSON);
         Map<String, Object> caseData = callbackRequest.getCaseDetails().getData();
 
         List<InterimHearingData> interimHearingList = Optional.ofNullable(caseData.get(INTERIM_HEARING_COLLECTION))
             .map(this::convertToInterimHearingDataList).orElse(Collections.emptyList());
 
         List<InterimHearingItem> interimHearingItems
-            = interimHearingList.stream().map(InterimHearingData::getValue).collect(Collectors.toList());
+            = interimHearingList.stream().map(InterimHearingData::getValue).toList();
 
         List<Map<String, Object>> interimDataMap = interimHearingItems.stream()
             .map(obj -> new ObjectMapper().convertValue(obj, new TypeReference<Map<String, Object>>() {
-            })).collect(Collectors.toList());
+            })).toList();
 
         interimDataMap.forEach(data -> verifyAppData(callbackRequest, data));
     }
@@ -247,29 +278,99 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         assertEquals(TEST_SOLICITOR_NAME, notificationRequest.getName());
         assertEquals(TEST_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
         assertEquals("contested", notificationRequest.getCaseType());
-        assertThat("checking in loop", notificationRequest.getSelectedCourt(),
-            anyOf(is("bristol"),
-                is("cfc")));
-
+        if (notificationRequest.getSelectedCourt().equals("bristol")) {
+            assertTrue(notificationRequest.getSelectedCourt().contains("bristol"));
+        }
+        if (notificationRequest.getSelectedCourt().equals("cfc")) {
+            assertTrue(notificationRequest.getSelectedCourt().contains("cfc"));
+        }
         assertEquals("respondent test", notificationRequest.getRespondentName());
         assertEquals("Applicant test", notificationRequest.getApplicantName());
     }
 
     @Test
     public void shouldCreateNotificationRequestForRespSolicitorForContestedJourneyForInterimHearing() {
-        CallbackRequest callbackRequest = buildInterimHearingCallbackRequest();
+        CallbackRequest callbackRequest = buildHearingCallbackRequest(INTERIM_HEARING_JSON);
         Map<String, Object> caseData = callbackRequest.getCaseDetails().getData();
 
         List<InterimHearingData> interimHearingList = Optional.ofNullable(caseData.get(INTERIM_HEARING_COLLECTION))
             .map(this::convertToInterimHearingDataList).orElse(Collections.emptyList());
 
         List<InterimHearingItem> interimHearingItems
-            = interimHearingList.stream().map(InterimHearingData::getValue).collect(Collectors.toList());
+            = interimHearingList.stream().map(InterimHearingData::getValue).toList();
 
         List<Map<String, Object>> interimDataMap = interimHearingItems.stream()
                 .map(obj -> new ObjectMapper().convertValue(obj, new TypeReference<Map<String, Object>>() {
-                })).collect(Collectors.toList());
+                })).toList();
         interimDataMap.forEach(data -> verifyData(callbackRequest, data));
+    }
+
+    @Test
+    public void shouldCreateNotificationRequestForAppSolicitorForConsentedJourneyForHearing() {
+        CallbackRequest callbackRequest = buildHearingCallbackRequest(CONSENTED_HEARING_JSON);
+        Map<String, Object> caseData = callbackRequest.getCaseDetails().getData();
+
+        List<ConsentedHearingDataWrapper> hearings = helper.getHearings(caseData);
+        List<ConsentedHearingDataElement> elements = hearings.stream().map(ConsentedHearingDataWrapper::getValue).toList();
+
+        List<Map<String, Object>> hearingDataMap = elements.stream()
+            .map(obj -> new ObjectMapper().convertValue(obj, new TypeReference<Map<String, Object>>() {
+            })).toList();
+
+        hearingDataMap.forEach(data -> verifyConsentedAppHearingData(callbackRequest, data));
+    }
+
+    private void verifyConsentedAppHearingData(CallbackRequest callbackRequest, Map<String, Object> data) {
+        NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForConsentApplicantSolicitor(
+            callbackRequest.getCaseDetails(), data);
+
+        assertEquals("12345678", notificationRequest.getCaseReferenceNumber());
+        assertEquals("1111-2222-3333", notificationRequest.getSolicitorReferenceNumber());
+        assertEquals("EM18D84321", notificationRequest.getDivorceCaseNumber());
+        assertEquals("Solicitor Name", notificationRequest.getName());
+        assertEquals("solicitor@mailinator.com", notificationRequest.getNotificationEmail());
+        assertEquals("consented", notificationRequest.getCaseType());
+        assertThat("checking in loop", notificationRequest.getSelectedCourt(),
+            anyOf(is("liverpool"),
+                is("cfc")));
+
+        assertEquals("Lee Powers Mcbride", notificationRequest.getRespondentName());
+        assertEquals("Austin Bates Porter", notificationRequest.getApplicantName());
+    }
+
+    @Test
+    public void shouldCreateNotificationRequestForRespSolicitorForConsentedJourneyForHearing() {
+        CallbackRequest callbackRequest = buildHearingCallbackRequest(CONSENTED_HEARING_JSON);
+        Map<String, Object> caseData = callbackRequest.getCaseDetails().getData();
+        caseData.put(RESP_SOLICITOR_REFERENCE,TEST_RESP_SOLICITOR_REFERENCE);
+        caseData.put("divorceCaseNumber",TEST_DIVORCE_CASE_NUMBER);
+        caseData.put("rSolicitorEmail", TEST_RESP_SOLICITOR_EMAIL);
+        caseData.put(RESP_SOLICITOR_NAME, TEST_RESP_SOLICITOR_NAME);
+
+        List<ConsentedHearingDataWrapper> hearings = helper.getHearings(caseData);
+        List<ConsentedHearingDataElement> elements = hearings.stream().map(ConsentedHearingDataWrapper::getValue).toList();
+
+        List<Map<String, Object>> hearingDataMap = elements.stream()
+            .map(obj -> new ObjectMapper().convertValue(obj, new TypeReference<Map<String, Object>>() {
+            })).toList();
+        hearingDataMap.forEach(data -> verifyConsentedRespHearingData(callbackRequest, data));
+    }
+
+    private void verifyConsentedRespHearingData(CallbackRequest callbackRequest, Map<String, Object> data) {
+        NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForRespondentSolicitor(
+            callbackRequest.getCaseDetails(), data);
+
+        assertEquals("12345678", notificationRequest.getCaseReferenceNumber());
+        assertEquals(TEST_RESP_SOLICITOR_REFERENCE, notificationRequest.getSolicitorReferenceNumber());
+        assertEquals(TEST_DIVORCE_CASE_NUMBER, notificationRequest.getDivorceCaseNumber());
+        assertEquals(TEST_RESP_SOLICITOR_NAME, notificationRequest.getName());
+        assertEquals(TEST_RESP_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
+        assertEquals("consented", notificationRequest.getCaseType());
+        assertThat("checking in loop", notificationRequest.getSelectedCourt(),
+            anyOf(is("liverpool"),
+                is("cfc")));
+        assertEquals("Lee Powers Mcbride", notificationRequest.getRespondentName());
+        assertEquals("Austin Bates Porter", notificationRequest.getApplicantName());
     }
 
     @Test
@@ -290,6 +391,29 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         assertEquals("nottingham", notificationRequest.getSelectedCourt());
     }
 
+    @Test
+    public void givenValidData_createBarristerNotificationRequest() {
+        CaseDetails caseDetails = buildCaseDetails();
+        Barrister barrister = createBarrister();
+        NotificationRequest result = notificationRequestMapper.buildNotificationRequest(caseDetails, barrister);
+        assertEquals("1234", result.getBarristerReferenceNumber());
+    }
+
+
+    private Barrister createBarrister() {
+        Organisation organisation = Organisation.builder()
+            .organisationID("1234")
+            .organisationName("Org Name")
+            .build();
+        Barrister barrister = Barrister.builder()
+            .name("barrister")
+            .email("barrister@barrister.com")
+            .organisation(organisation)
+            .phone("0123456789")
+            .build();
+        return barrister;
+    }
+
     private void verifyData(CallbackRequest callbackRequest, Map<String, Object> data) {
         NotificationRequest notificationRequest = notificationRequestMapper.getNotificationRequestForRespondentSolicitor(
             callbackRequest.getCaseDetails(), data);
@@ -300,9 +424,12 @@ public class NotificationRequestMapperTest extends BaseServiceTest {
         assertEquals(TEST_RESP_SOLICITOR_NAME, notificationRequest.getName());
         assertEquals(TEST_RESP_SOLICITOR_EMAIL, notificationRequest.getNotificationEmail());
         assertEquals("contested", notificationRequest.getCaseType());
-        assertThat("checking in loop", notificationRequest.getSelectedCourt(),
-            anyOf(is("bristol"),
-            is("cfc")));
+        if (notificationRequest.getSelectedCourt().equals("bristol")) {
+            assertTrue(notificationRequest.getSelectedCourt().contains("bristol"));
+        }
+        if (notificationRequest.getSelectedCourt().equals("cfc")) {
+            assertTrue(notificationRequest.getSelectedCourt().contains("cfc"));
+        }
         assertEquals("respondent test", notificationRequest.getRespondentName());
         assertEquals("Applicant test", notificationRequest.getApplicantName());
     }
